Created the installation instructions for the Tomcat server

--- a/AIGG/xml/install_tomcat_linux_text.xhtml
+++ b/AIGG/xml/install_tomcat_linux_text.xhtml
@@ -46,12 +46,12 @@
 
 	<li> 
 		<div class="instr-header">
-			Renaming the folder
+			Extract the tar.gz file
 		</div>
 		<div class="instr-body">
-			For convienience the folder apache-tomcat-7.0.56 will be renamed to 'tomcat':
+			To extract the apache-tomcat-7.0.45.tar.gz file execute the following command: 
 			<div class="code">
-				mv apache-tomcat-7.0.56 tomcat
+				tar xf apache-tomcat-7.0.45.tar.gz
 			</div>
 		</div>
 	</li>
@@ -68,5 +68,50 @@
 		</div>
 	</li>
 	
+	<li> 
+		<div class="instr-header">
+			Start the Tomcat server for the first time
+		</div>
+		<div class="instr-body">
+			To start the Tomcat server execute the following script:
+			<div class="code">
+				./tomcat/bin/startup.sh
+			</div>
+		</div>
+	</li>
+	
+	<li> 
+		<div class="instr-header">
+			Check if the server has started correctly
+		</div>
+		<div class="instr-body">
+			Checking if the server has started correctly can be done by opening your browser and go to the localhost:8080 page. Now you should get the Tomcat page which is similar to:
+			<div>
+			<img src="../../AIGG/img/linux-tomcat-3.png" width="600px"></img>
+			</div>
+			Another way to check if the server has started correctly is by looking at the Catalina logs. This log contains the errors, warnings and info messages that each servlet generates. If something went wrong it should be logged in the catalina.out file. To show the last lines of the Catalina log type the following command:
+			<div class="code">
+				tail ./tomcat/logs/catalina.out
+			</div>
+			When the server has started successfully it should not show any errors and the message: "INFO: Server startup in xxxx ms" should be printed in the end.
+			<div>
+				<img src="../../AIGG/img/linux-tomcat-4.png"></img>
+			</div>
+			When you want to watch the log continuously you can also add the '-f' flag after the tail command. Then whenever there is written to the log file, this is shown in the terminal. You could of course also use any other text editor to browse through the complete logs.
+		</div>
+	</li>
+	
+	<li> 
+		<div class="instr-header">
+			Shutting down the Tomcat server
+		</div>
+		<div class="instr-body">
+			To shutdown the Tomcat server execute the following script:
+			<div class="code">
+				./tomcat/bin/shutdown.sh
+			</div>
+		</div>
+	</li>
+</ol>
 	
 </div>
