--- a/AIGG/xml/install_maven_linux_text.xhtml
+++ b/AIGG/xml/install_maven_linux_text.xhtml
@@ -1,3 +1,34 @@
-<span>
-Install Maven on Linux.....
-</span>
+<div>
+	<ol>
+		<li> 
+			<div class="instr-header">
+				Open the terminal.
+			</div>
+			<div class="instr-body">
+			<img src="../../AIGG/img/linux-terminal.png"></img>
+			</div>
+		</li>
+		
+		<li> 
+			<div class="instr-header">
+				Update the apt repositories
+			</div>
+			<div class="instr-body">
+				<div class="code">
+					sudo apt-get update
+				</div>
+			</div>
+		</li>
+		
+		<li> 
+			<div class="instr-header">
+				Install the Maven package
+			</div>
+			<div class="instr-body">
+				<div class="code">
+					sudo apt-get install maven
+				</div>
+			</div>
+		</li>
+	</ol>
+</div>
