--- a/AIGG/xml/system_gale_text_6.xhtml
+++ b/AIGG/xml/system_gale_text_6.xhtml
@@ -4,7 +4,7 @@
 	xmlns:gale="http://gale.tue.nl/adaptation">
 	
 <span>
-<div style="background-image:url(../../AIGG/img/text_bg_grey.jpg);width:1024px;height:40px;line-height:40px">
+<div class="instr-header">
 6. Start Tomcat (using startup.bat)
 <gale:block>
 <gale:a>
