--- a/AIGG/xml/system_gale_text_7.xhtml
+++ b/AIGG/xml/system_gale_text_7.xhtml
@@ -1,5 +1,5 @@
 <span>
-<div style="background-image:url(../../AIGG/img/text_bg_grey.jpg);width:1024px;height:40px;line-height:40px">
+<div class="instr-header">
 7. Open a browser and to 
 <a href="http://localhost:8080/gale" target="blank">http://localhost:8080/gale</a>
 </div>
