--- a/AIGG/xml/system_jdk_text_3.xhtml
+++ b/AIGG/xml/system_jdk_text_3.xhtml
@@ -1,5 +1,5 @@
 <span>
-<div style="background-image:url(../../AIGG/img/text_bg_grey.jpg);width:1024px;height:40px;line-height:40px">
+<div class="instr-header">
 3. Add your Java's bin directory <u>C:\Program Files\Java\jdk1.7.0_25\bin</u> (something like this) to your environment variables <u>path</u>
 </div>
 <br />
