--- a/AIGG/xml/system_maven_text_4.xhtml
+++ b/AIGG/xml/system_maven_text_4.xhtml
@@ -1,6 +1,6 @@
 <span>
 
-<div style="background-image:url(../../AIGG/img/text_bg_grey.jpg);width:1024px;height:40px;line-height:40px">
+<div class="instr-header">
 4. Verify your installation in Command Line Window with the commands : mvn -version
 </div>
 <br />
