--- a/AIGG/xml/system_tomcat_text_3.xhtml
+++ b/AIGG/xml/system_tomcat_text_3.xhtml
@@ -1,5 +1,5 @@
 <span>
-<div style="background-image:url(../../AIGG/img/text_bg_grey.jpg);width:1024px;height:40px;line-height:40px">
+<div class="instr-header">
 3. Execute in Command Line Window
 </div>
 <ol style="list-style-type: square">
