--- a/AIGG/xml/start_template.xhtml
+++ b/AIGG/xml/start_template.xhtml
@@ -7,31 +7,35 @@
 	<gale:attr-variable name="href" expr="&quot;$\{home}/&quot; + ${?style}"/>
 </link>
 
-<h1><gale:variable expr="${?title}"/></h1>
+<div class="content">
 
-<p>
-<gale:object><gale:attr-variable name="data" expr="${?introduction}" /></gale:object>
-</p>
+	<h1><gale:variable expr="${?title}"/></h1>
 
-<!-- display the installation instruction for all the OS -->
-<div id="installation-links">
-	<gale:for var="os" expr="${OperatingSystem&lt;-(parent)}">
-		<div class="os-installations">
-			<gale:attr-variable name="id" expr="${%os?title}"/>
-			<p>Installation Instructions for <gale:variable expr="${%os?title}"/>:</p>
-			
-			<!-- looping over all the instructions -->
-			<gale:for var="system" expr="${%os&lt;-(parent)}">
-				<div class="system-link">
-					<gale:a>
-						<gale:variable expr="${%system?title}"/>
-						<gale:attr-variable name="href" expr="&quot;%system&quot;"/>
-					</gale:a>
-				</div>
-			</gale:for>
-			
-		</div>
-	</gale:for>
+	<p>
+	<gale:object><gale:attr-variable name="data" expr="${?introduction}" /></gale:object>
+	</p>
+
+	<!-- display the installation instruction for all the OS -->
+	<div id="installation-links">
+		<gale:for var="os" expr="${OperatingSystem&lt;-(parent)}">
+			<div class="os-installations">
+				<gale:attr-variable name="id" expr="${%os?title}"/>
+				<p>Installation Instructions for <gale:variable expr="${%os?title}"/>:</p>
+				
+				<!-- looping over all the instructions -->
+				<gale:for var="system" expr="${%os&lt;-(parent)}">
+					<div class="system-link">
+						<gale:a>
+							<gale:variable expr="${%system?title}"/>
+							<gale:attr-variable name="href" expr="&quot;%system&quot;"/>
+						</gale:a>
+					</div>
+				</gale:for>
+				
+			</div>
+		</gale:for>
+	</div>
+
 </div>
-
+	
 </html>
