--- a/AIGG/xml/system_gale_source_text.xhtml
+++ b/AIGG/xml/system_gale_source_text.xhtml
@@ -1,5 +1,5 @@
 <span>
-<div style="background-image:url(../../AIGG/img/text_bg_grey.jpg);width:1024px;height:40px;line-height:40px">
+<div class="instr-header">
 1. Download source distribution from the following source
 </div>
 <ol style="list-style-type: square">
