--- a/AIGG/xml/system_gale_source_text_2.xhtml
+++ b/AIGG/xml/system_gale_source_text_2.xhtml
@@ -1,5 +1,5 @@
 <span>
-<div style="background-image:url(../../AIGG/img/text_bg_grey.jpg);width:1024px;height:40px;line-height:40px">
+<div class="instr-header">
 2. Unzip gale-source.zip in the GALE_HOME directory
 (it creates a gale-source subdirectory)
 </div>
