--- a/AIGG/xml/system_gale_source_text_3.xhtml
+++ b/AIGG/xml/system_gale_source_text_3.xhtml
@@ -1,5 +1,5 @@
 <span>
-<div style="background-image:url(../../AIGG/img/text_bg_grey.jpg);width:1024px;height:40px;line-height:40px">3. Open Command Line Window , Go to the gale-source/master directory , Run the command mvn install
+<div class="instr-header">3. Open Command Line Window , Go to the gale-source/master directory , Run the command mvn install
 </div>
 note:
 <ol style="list-style-type: square">
