--- a/AIGG/xml/system_gale_source_text_4.xhtml
+++ b/AIGG/xml/system_gale_source_text_4.xhtml
@@ -1,5 +1,5 @@
 <span>
-<div style="background-image:url(../../AIGG/img/text_bg_grey.jpg);width:1024px;height:40px;line-height:40px">
+<div class="instr-header">
 4. Move the gale.war file to tomcat/webapps
 </div>
 <br />
