--- a/AIGG/xml/system_gale_text_4.xhtml
+++ b/AIGG/xml/system_gale_text_4.xhtml
@@ -1,5 +1,5 @@
 <span>
-<div style="background-image:url(../../AIGG/img/text_bg_grey.jpg);width:1024px;height:40px;line-height:40px">
+<div class="instr-header">
 4. Extract files</div>
 <ol style="list-style-type: square">
 <li>Copy (not move) the gale.war file to the GALE_HOME directory</li>
