--- a/AIGG/xml/system_gale_text_5.xhtml
+++ b/AIGG/xml/system_gale_text_5.xhtml
@@ -1,6 +1,6 @@
 <span>
 
-<div style="background-image:url(../../AIGG/img/text_bg_grey.jpg);width:1024px;height:40px;line-height:40px">
+<div class="instr-header">
 5. Make sure your computer is on-line
 (GALE will not start if your computer is not on-line!)
 </div>
