--- a/AIGG/xml/system_maven_text.xhtml
+++ b/AIGG/xml/system_maven_text.xhtml
@@ -1,5 +1,5 @@
 <span>
-<div style="background-image:url(../../AIGG/img/text_bg_grey.jpg);width:1024px;height:32px;line-height:32px">
+<div class="instr-header">
 1. Download Maven from the following source
 </div>
 <ol style="list-style-type: square">
