--- a/AIGG/xml/system_tomcat_text_2.xhtml
+++ b/AIGG/xml/system_tomcat_text_2.xhtml
@@ -1,5 +1,5 @@
 <span>
-<div style="background-image:url(../../AIGG/img/text_bg_grey.jpg);width:1024px;height:40px;line-height:40px">
+<div class="instr-header">
 2. Unzip the archive, preferably in your home directory. C:\
 </div>
 </span>
