Updated the Domain model, now the Maven installation instructions for Linux are loaded correctly.

--- a/AIGG/xml/install_jdk_linux_text.xhtml
+++ b/AIGG/xml/install_jdk_linux_text.xhtml
@@ -8,6 +8,7 @@
 		<img src="../../AIGG/img/linux-terminal.png"></img>
 		</div>
 	</li>
+	
 	<li>
 		<div class="instr-header">
 			Update the apt repository
@@ -20,6 +21,7 @@
 			When you press enter you will be requested to enter the password.
 		</div>
 	</li>
+	
 	<li> 
 		<div class="instr-header">Install the openjdk-7-jdk package</div>
 		<div class="instr-body">
@@ -28,7 +30,9 @@
 				sudo apt-get install openjdk-7-jdk
 			</div>
 			And type Y and press enter to accept the to be installed packages.
-			<img src="../../AIGG/img/linux-java-4.png"></img>
+			<div>
+				<img src="../../AIGG/img/linux-java-4.png"></img>
+			</div>
 		</div>
 	</li>
 	<li>
