--- a/AIGG/xml/install_jdk_linux_text.xhtml
+++ b/AIGG/xml/install_jdk_linux_text.xhtml
@@ -5,7 +5,17 @@
 			Open the terminal.
 		</div>
 		<div class="instr-body">
-		<img src="../../AIGG/img/linux-terminal.png"></img>
+		<div class="thumbnail">
+			
+			<label>
+				<input type="checkbox"/>
+				<img id="img-linux-terminal" src="../../AIGG/img/linux-terminal.png" alt="Click to enlarge">
+					<span class="hover-text">
+						Click to enlarge
+					</span>
+				</img>
+			</label>
+		</div>
 		</div>
 	</li>
 	
