--- a/AIGG/xml/install_info_template2.xhtml
+++ b/AIGG/xml/install_info_template2.xhtml
@@ -12,7 +12,7 @@
 		<!-- making it possible to hide the info when needed -->
 		<gale:if expr="${#visited} > 1">
 			<gale:then> <!-- The page is visited before -->
-				<div id="hide-info">
+				<div class="hide-info">
 					<h3>Installation information for <gale:variable expr="${?title}"/></h3>
 					You already have installed <gale:variable expr="${?title}"/>.
 					<label for="showhide">
