Use new thumbnails for linux instructions

--- a/AIGG/xml/install_gale_linux_text.xhtml
+++ b/AIGG/xml/install_gale_linux_text.xhtml
@@ -105,7 +105,16 @@
 			<div class="instr-body">
 				Open your browser and type in the address bar localhost:8080/gale. You have to see a page similar to the following screenshot:
 				<div>
-					<img src="../../AIGG/img/linux-gale-source-11.png" width="700px"></img>
+					<div class="thumbnail">
+						<label>
+							<input type="checkbox"/>
+							<img src="../../AIGG/img/linux-gale-source-11.png" alt="Click to enlarge">
+								<span class="hover-text">
+									Click to enlarge
+								</span>
+							</img>
+						</label>
+					</div>
 				</div>
 			</div>
 		</li>
