--- a/AIGG/xml/install_jdk_linux_text.xhtml
+++ b/AIGG/xml/install_jdk_linux_text.xhtml
@@ -5,17 +5,16 @@
 			Open the terminal.
 		</div>
 		<div class="instr-body">
-		<div class="thumbnail">
-			
-			<label>
-				<input type="checkbox"/>
-				<img id="img-linux-terminal" src="../../AIGG/img/linux-terminal.png" alt="Click to enlarge">
-					<span class="hover-text">
-						Click to enlarge
-					</span>
-				</img>
-			</label>
-		</div>
+			<div class="thumbnail">
+				<label>
+					<input type="checkbox"/>
+					<img id="img-linux-terminal" src="../../AIGG/img/linux-terminal.png" alt="Click to enlarge">
+						<span class="hover-text">
+							Click to enlarge
+						</span>
+					</img>
+				</label>
+			</div>
 		</div>
 	</li>
 	
@@ -41,7 +40,16 @@
 			</div>
 			And type Y and press enter to accept the to be installed packages.
 			<div>
-				<img src="../../AIGG/img/linux-java-4.png"></img>
+				<div class="thumbnail">
+					<label>
+						<input type="checkbox"/>
+						<img id="img-linux-terminal" src="../../AIGG/img/linux-java-4.png" alt="Click to enlarge">
+							<span class="hover-text">
+								Click to enlarge
+							</span>
+						</img>
+					</label>
+				</div>
 			</div>
 		</div>
 	</li>
@@ -72,7 +80,16 @@
 				javac 1.7.0_65 
 			</div>
 			
-			<img src="../../AIGG/img/linux-java-7.png"></img>
+			<div class="thumbnail">
+				<label>
+					<input type="checkbox"/>
+					<img id="img-linux-terminal" src="../../AIGG/img/linux-java-7.png" alt="Click to enlarge">
+						<span class="hover-text">
+							Click to enlarge
+						</span>
+					</img>
+				</label>
+			</div>
 			
 			
 			
