Put some images into div's

--- a/AIGG/xml/install_gale_source_linux_text.xhtml
+++ b/AIGG/xml/install_gale_source_linux_text.xhtml
@@ -63,7 +63,9 @@
 					mvn install
 				</div>
 				Executing this command can last for several minutes and should finish without showing any errors. In the end an 'Reactor summary' will be shown where every component of the GALE framework should be compiled sucessfully as shown in the following screenshot:
-				<img src="../../AIGG/img/linux-gale-source-6.png"></img>
+				<div>	
+					<img src="../../AIGG/img/linux-gale-source-6.png"></img>
+				</div>
 			</div>
 		</li>	
 		
