Added user model variable adaption

--- a/AIGG/xml/install_gale_source_linux_text.xhtml
+++ b/AIGG/xml/install_gale_source_linux_text.xhtml
@@ -1,3 +1,8 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns:gale="http://gale.tue.nl/adaptation">
+
 <div>
 	<ol>
 		<li> 
@@ -63,16 +68,18 @@
 					mvn install
 				</div>
 				Executing this command can last for several minutes and should finish without showing any errors. In the end an 'Reactor summary' will be shown where every component of the GALE framework should be compiled sucessfully as shown in the following screenshot:
-				<div class="thumbnail">
-					<label>
-						<input type="checkbox"/>
-						<img src="../../AIGG/img/linux-gale-source-6.png" alt="Click to enlarge">
-							<span class="hover-text">
-								Click to enlarge
-							</span>
-						</img>
-					</label>
-				</div>
+					<div class="thumbnail">
+						<label>
+							<input type="checkbox"/>
+								<gale:a href="" exec="#{Start#os, ${Start#os}-1};">
+									<img src="../../AIGG/img/linux-gale-source-6.png" alt="Click to enlarge">
+										<span class="hover-text">
+											Click to enlarge
+										</span>
+									</img>
+								</gale:a>
+						</label>
+					</div>
 			</div>
 		</li>	
 		
@@ -180,18 +187,15 @@
 				<div class="thumbnail">
 					<label>
 						<input type="checkbox"/>
-						<img src="../../AIGG/img/linux-gale-source-11.png" alt="Click to enlarge">
-							<span class="hover-text">
-								Click to enlarge
-							</span>
-						</img>
+							<img src="../../AIGG/img/linux-gale-source-11.png" alt="Click to enlarge">
+								<span class="hover-text">
+									Click to enlarge
+								</span>
+							</img>
 					</label>
 				</div>
 			</div>
 		</li>
-		
-		
-		
-		
 	</ol>
 </div>
+</html>
